# power-profile

./: CMakeLists.txt  LICENSE  PROJECT_SUMMARY.md  README.md  build.sh  demo.sh  requirements.txt
data/runs/: comparison_demo.csv  dvfs_demo.csv  dvfs_demo_tasks.csv
docs/: DOCUMENTATION.md
scripts/: benchmark.py  plot_results.py
src/: main.cpp
src/core/: SimulationEngine.cpp  SimulationEngine.h
src/models/: EnergyModel.cpp  EnergyModel.h  ThermalModel.cpp  ThermalModel.h
src/output/: ReportGenerator.cpp  ReportGenerator.h
src/scheduler/: DVFSScheduler.cpp  DVFSScheduler.h  FCFSScheduler.cpp  FCFSScheduler.h  PriorityScheduler.cpp  PriorityScheduler.h  RoundRobinScheduler.cpp  RoundRobinScheduler.h  Scheduler.h
src/tasks/: Task.cpp  Task.h  TaskGenerator.cpp  TaskGenerator.h
tests/: test_powerprofile.cpp
